--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,8 @@
     "admin": "apps/admin",
     "admin-e2e": "apps/admin-e2e",
     "api": "apps/api",
-    "api-interfaces": "libs/api-interfaces"
+    "api-interfaces": "libs/api-interfaces",
+    "auth-components": "libs/auth/components",
+    "auth-store": "libs/auth/store"
   }
 }
