--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.0.2",
+    "@ngrx/component-store": "~13.0.0",
+    "@ngrx/effects": "~13.0.0",
+    "@ngrx/entity": "~13.0.0",
+    "@ngrx/router-store": "~13.0.0",
+    "@ngrx/store": "~13.0.0",
     "@nrwl/angular": "13.10.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
@@ -42,6 +47,8 @@
     "@angular/language-service": "~13.3.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@ngrx/schematics": "~13.0.0",
+    "@ngrx/store-devtools": "~13.0.0",
     "@nrwl/cli": "13.10.0",
     "@nrwl/cypress": "13.10.0",
     "@nrwl/eslint-plugin-nx": "13.10.0",
@@ -58,6 +65,7 @@
     "eslint": "~8.12.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "jasmine-marbles": "~0.9.1",
     "jest": "27.2.3",
     "jest-preset-angular": "11.1.1",
     "nx": "13.10.0",
