--- a/angular.json
+++ b/angular.json
@@ -4,8 +4,8 @@
     "admin": "apps/admin",
     "admin-e2e": "apps/admin-e2e",
     "api": "apps/api",
-    "api-interfaces": "libs/api-interfaces",
     "auth-components": "libs/auth/components",
-    "auth-store": "libs/auth/store"
+    "auth-store": "libs/auth/store",
+    "data-models": "libs/data/models"
   }
 }
