--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "swagger-ui-express": "^4.3.0",
+    "sweetalert2": "^11.4.8",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
