--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@popperjs/core": "^2.10.2",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "lodash": "^4.17.21",
