--- a/angular.json
+++ b/angular.json
@@ -7,6 +7,7 @@
     "auth-components": "libs/auth/components",
     "auth-store": "libs/auth/store",
     "data-models": "libs/data/models",
+    "data-services": "libs/data/services",
     "shared-toast-store": "libs/shared/toast-store",
     "ui": "libs/ui"
   }
