--- a/package.json
+++ b/package.json
@@ -40,16 +40,20 @@
     "bootstrap-icons": "^1.8.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "mongoose": "^6.2.10",
+    "mongoose-autopopulate": "^0.16.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pdfmake": "^0.2.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "swagger-ui-express": "^4.3.0",
     "sweetalert2": "^11.4.8",
     "tslib": "^2.0.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -73,11 +77,13 @@
     "@nrwl/node": "13.10.0",
     "@nrwl/workspace": "13.10.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jest": "27.0.2",
     "@types/lodash": "^4.14.181",
     "@types/node": "16.11.7",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/pdfmake": "^0.1.21",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "cypress": "^9.1.0",
