--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,7 @@
       ],
       "@skooltrak-project/auth/store": ["libs/auth/store/src/index.ts"],
       "@skooltrak-project/data/models": ["libs/data/models/src/index.ts"],
+      "@skooltrak-project/data/services": ["libs/data/services/src/index.ts"],
       "@skooltrak-project/shared/toast-store": [
         "libs/shared/toast-store/src/index.ts"
       ],
