--- a/apps/admin/project.json
+++ b/apps/admin/project.json
@@ -14,7 +14,15 @@
         "polyfills": "apps/admin/src/polyfills.ts",
         "tsConfig": "apps/admin/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": ["apps/admin/src/favicon.ico", "apps/admin/src/assets"],
+        "assets": [
+          "apps/admin/src/favicon.ico",
+          "apps/admin/src/assets",
+          {
+            "input": "libs/shared/assets/src/images/logos",
+            "glob": "**/*",
+            "output": "assets/logos"
+          }
+        ],
         "styles": ["apps/admin/src/styles.scss"],
         "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
       },
