--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bootstrap-icons": "^1.8.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "eslint-plugin-ngrx": "^2.1.2",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "mongoose": "^6.2.10",
