--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "noResolve": false,
     "rootDir": ".",
+    "noImplicitAny": false,
+    "allowJs": true,
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
