--- a/apps/admin/project.json
+++ b/apps/admin/project.json
@@ -23,8 +23,16 @@
             "output": "assets/logos"
           }
         ],
-        "styles": ["apps/admin/src/styles.scss"],
-        "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
+        "styles": [
+          "./node_modules/quill/dist/quill.core.css",
+          "./node_modules/quill/dist/quill.bubble.css",
+          "./node_modules/quill/dist/quill.snow.css",
+          "apps/admin/src/styles.scss"
+        ],
+        "scripts": [
+          "node_modules/quill/dist/quill.min.js",
+          "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+        ]
       },
       "configurations": {
         "production": {
