--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "set-registry": "npm config set registry https://registry.npmjs.org/"
   },
   "private": true,
   "dependencies": {
@@ -40,15 +41,20 @@
     "bootstrap-icons": "^1.8.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "date-fns": "^2.28.0",
     "eslint-plugin-ngrx": "^2.1.2",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "mongoose": "^6.2.10",
     "mongoose-autopopulate": "^0.16.1",
+    "ngx-quill": "^16.2.0",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pdfmake": "^0.2.5",
+    "quill": "^1.3.7",
+    "quill-image-resize": "^3.0.9",
+    "quill-image-resize-module": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "swagger-ui-express": "^4.3.0",
@@ -81,10 +87,11 @@
     "@types/file-saver": "^2.0.5",
     "@types/jest": "27.0.2",
     "@types/lodash": "^4.14.181",
-    "@types/node": "16.11.7",
+    "@types/node": "^16.11.7",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/pdfmake": "^0.1.21",
+    "@types/quill": "^1.3.10",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "cypress": "^9.1.0",
