(feat)Messages store changes

--- a/libs/messaging/.eslintrc.json
+++ b/libs/messaging/.eslintrc.json
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "skooltrak-project",
+            "prefix": "skooltrak-messaging",
             "style": "kebab-case"
           }
         ]
