--- a/apps/admin/project.json
+++ b/apps/admin/project.json
@@ -101,7 +101,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/apps/admin"],
       "options": {
-        "jestConfig": "apps/admin/jest.config.js",
+        "jestConfig": "apps/admin/jest.config.ts",
         "passWithNoTests": true
       }
     }
