--- a/libs/auth/components/project.json
+++ b/libs/auth/components/project.json
@@ -8,7 +8,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/libs/auth/components"],
       "options": {
-        "jestConfig": "libs/auth/components/jest.config.js",
+        "jestConfig": "libs/auth/components/jest.config.ts",
         "passWithNoTests": true
       }
     },
