--- a/libs/data/models/project.json
+++ b/libs/data/models/project.json
@@ -14,7 +14,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/libs/data/models"],
       "options": {
-        "jestConfig": "libs/data/models/jest.config.js",
+        "jestConfig": "libs/data/models/jest.config.ts",
         "passWithNoTests": true
       }
     }
