--- a/libs/messaging/project.json
+++ b/libs/messaging/project.json
@@ -8,7 +8,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/libs/messaging"],
       "options": {
-        "jestConfig": "libs/messaging/jest.config.js",
+        "jestConfig": "libs/messaging/jest.config.ts",
         "passWithNoTests": true
       }
     },
