--- a/libs/shared/assets/project.json
+++ b/libs/shared/assets/project.json
@@ -14,7 +14,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/libs/shared/assets"],
       "options": {
-        "jestConfig": "libs/shared/assets/jest.config.js",
+        "jestConfig": "libs/shared/assets/jest.config.ts",
         "passWithNoTests": true
       }
     }
